add/server: method get my lessonEnroll by courseId